packages/build/tests/error/build/fixtures/fail_build/plugin.js
module.exports = {
  name: 'netlify-plugin-test',
  async onInit({
    utils: {
      build: { failBuild },
    },
  }) {
    failBuild('test')
  },
}
